Remove schema object dropping code and SchemaObject type parameters